--- a/endangered-list-app/src/Footer.css
+++ b/endangered-list-app/src/Footer.css
@@ -1,10 +1,9 @@
 
-.header {
-  font-size: 50px;
+.footer {
+  font-size: 7px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgb(18, 163, 163);
   padding: 10px;
-  text-shadow: 2px 2px white;
 }
